--- a/.github/workflows/Recovery Build (Legacy).yml
+++ b/.github/workflows/Recovery Build (Legacy).yml
@@ -1,6 +1,7 @@
 name: Recovery Build (Legacy)
 on:
-  workflow_dispatch: runs-on:Self-hosted
+  workflow_dispatch: 
+  runs-on:Self-hosted
     inputs:
       IMG_URL:
         description: 'IMG_ URL'
